fixed button clipping

--- a/src/components/Brand/brand.css
+++ b/src/components/Brand/brand.css
@@ -150,15 +150,12 @@
     position: absolute;
     margin-right: 2ch;
     color: #7a7a7a;
-    width: 54px;
-    height: 55px;
     border: 2px solid #7a7a7a;
     border-radius: 100%;
     left: 1.3ch;
     top: 1ch;
     font-size: 40px;
     z-index: 5;
-    word-wrap: break-word;
     text-shadow: 0px 3px 4px rgba(202, 52, 52, 0.25);
 
 }
@@ -223,7 +220,6 @@
     background-color: #81818100;
     position: absolute;
     color: #00000000;
-    width: 30px;
     border: 2px solid #41404000;
     border-radius: 100%;
     left: 107ch;
@@ -338,11 +334,8 @@
 
     .close-btn {
         position: absolute;
-        margin-right: 2ch;
-        width: 34px;
-        height: 34px;
         font-size: 24px;
-        z-index: 5;
+
 
     }
 
@@ -429,11 +422,11 @@
 
     .brand-statement {
         position: absolute;
-        width: 70%;
+        width: 50%;
         height: 100%;
         top: 45ch;
         padding-left: 0ch;
-        left: 8ch;
+        left: 0ch;
         z-index: 0;
     }
 
@@ -465,12 +458,11 @@
 
 
     .close-btn {
-        width: 24px;
-        height: 26px;
-        top: 20px;
-        font-size: 14px;
-        z-index: 9;
+        text-align: center;
+        border: 1px solid #7a7a7a;
         border-radius: 10%;
+        font-size: 20px;
+        left: 2ch;
     }
 
     .wrapper-sqr-about-me {
@@ -486,9 +478,12 @@
     }
 
     .bubble {
+        height: 30ch;
+        width: 60ch;
         top: 0ch;
-        left: -8ch;
-        margin: 2%;
+        padding: 20%;
+        left: 0ch;
+        margin: 10%;
     }
 
 
@@ -507,17 +502,17 @@
 
 
     .close-btn-resume {
-        width: 24px;
-        height: 26px;
-        top: 360px;
-        font-size: 14px;
-        left: 40px;
-        z-index: 9;
         background-color: #ffe60500;
         position: absolute;
+        text-align: center;
         color: #7a7a7a;
-        border: 2px solid #7a7a7a;
+        border: 1px solid #7a7a7a;
+        text-shadow: 0px 3px 4px rgba(202, 52, 52, 0.25);
         border-radius: 10%;
+        font-size: 20px;
+        z-index: 5;
+        left: 4ch;
+        bottom: 95ch;
     }
 
 
