--- a/src/components/SideNav/sidenav.css
+++ b/src/components/SideNav/sidenav.css
@@ -4,7 +4,7 @@
     top: 0ch;
     height: 107.2ch;
     width: 340px;
-    height: 100%; 
+    height: 112ch; 
     margin: none;
     padding: 10px;
     z-index: 2;
@@ -181,7 +181,7 @@
 
 @media screen and (max-width: 790px) {
     .side-nav-bar {
-        height: 50%;
+        height: 30%;
         width: 80ch;
         top: 0px;
         left: 0ch;
@@ -284,7 +284,7 @@
             
                 button.btn-links {
                     padding: 10px;
-                    width: 99px;
+                    width: 102px;
                     height: 78px;
                     text-align: center;
             
@@ -294,7 +294,7 @@
             
                     font-size: 49px;
                     top: 0ch;
-                    left: -6px;
+                    left: 0px;
             
                 }
             
@@ -305,7 +305,7 @@
             
                 .btn-links-projects:hover {
             
-                    font-size: 24px;
+                    font-size: 23px;
                 }
             
                 .circle-links {
